--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Source\Actors\Static\LeftRoof.cs" />
     <Compile Include="Assets\Source\Actors\Static\SpiderWeb.cs" />
     <Compile Include="Assets\Source\Actors\Static\Floor2.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Ring1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
