--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,23 +53,32 @@
     <UnityVersion>2021.1.24f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Source\Actors\Static\Wall.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Heal.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Wall2.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Floor.cs" />
-    <Compile Include="Assets\Source\Actors\Characters\Grave.cs" />
-    <Compile Include="Assets\Source\Core\CameraController.cs" />
     <Compile Include="Assets\Source\Actors\Static\Map.cs" />
-    <Compile Include="Assets\Source\Core\UserInterface.cs" />
     <Compile Include="Assets\Inventory.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Dor2.cs" />
-    <Compile Include="Assets\Source\Actors\Static\CenterRoof.cs" />
     <Compile Include="Assets\Source\Actors\Static\Dor.cs" />
     <Compile Include="Assets\Source\Actors\Static\Window.cs" />
-    <Compile Include="Assets\Source\Actors\Actor.cs" />
     <Compile Include="Assets\Source\Actors\Static\Dog.cs" />
-    <Compile Include="Assets\Source\Actors\Characters\Boss1.cs" />
     <Compile Include="Assets\Source\Actors\Static\HidenSecret.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Ring1.cs" />
+    <Compile Include="Assets\Source\Core\MapLoader.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Sword.cs" />
+    <Compile Include="Assets\Source\Actors\Static\SecretEnterance.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Door2.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Meat.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Armor.cs" />
+    <Compile Include="Assets\Source\Actors\Characters\Ghost.cs" />
+    <Compile Include="Assets\Source\Actors\Static\LeftRoof.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Wall.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Heal.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Floor.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Wall2.cs" />
+    <Compile Include="Assets\Source\Actors\Characters\Grave.cs" />
+    <Compile Include="Assets\Source\Core\CameraController.cs" />
+    <Compile Include="Assets\Source\Core\UserInterface.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Dor2.cs" />
+    <Compile Include="Assets\Source\Actors\Static\CenterRoof.cs" />
+    <Compile Include="Assets\Source\Actors\Actor.cs" />
+    <Compile Include="Assets\Source\Actors\Characters\Boss1.cs" />
     <Compile Include="Assets\Source\Actors\Characters\Player.cs" />
     <Compile Include="Assets\Source\Actors\Static\StairsDown.cs" />
     <Compile Include="Assets\Source\Actors\Characters\Character.cs" />
@@ -78,25 +87,18 @@
     <Compile Include="Assets\Source\Actors\Static\HidenFloor.cs" />
     <Compile Include="Assets\Source\Actors\Characters\Skeleton.cs" />
     <Compile Include="Assets\Source\Actors\Static\RightRoof.cs" />
-    <Compile Include="Assets\Source\Core\MapLoader.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Sword.cs" />
-    <Compile Include="Assets\Source\Actors\Static\SecretEnterance.cs" />
     <Compile Include="Assets\Source\Utilities.cs" />
     <Compile Include="Assets\Source\Actors\Characters\DogCompanion.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Door2.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Meat.cs" />
     <Compile Include="Assets\Source\Actors\Characters\Zombie.cs" />
     <Compile Include="Assets\Source\Actors\Static\HidenWall1.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Armor.cs" />
     <Compile Include="Assets\Source\Actors\Static\HidenWall2.cs" />
     <Compile Include="Assets\Source\Actors\Static\Torch.cs" />
     <Compile Include="Assets\Source\Core\GameManager.cs" />
-    <Compile Include="Assets\Source\Actors\Characters\Ghost.cs" />
     <Compile Include="Assets\Source\Core\ActorManager.cs" />
-    <Compile Include="Assets\Source\Actors\Static\LeftRoof.cs" />
     <Compile Include="Assets\Source\Actors\Static\SpiderWeb.cs" />
     <Compile Include="Assets\Source\Actors\Static\Floor2.cs" />
-    <Compile Include="Assets\Source\Actors\Static\Ring1.cs" />
+    <Compile Include="Assets\Source\Actors\Static\Gate.cs" />
+    <Compile Include="Assets\Materials\LightFlickerEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -711,11 +713,17 @@
     <Reference Include="Unity.2D.PixelPerfect">
       <HintPath>Library\ScriptAssemblies\Unity.2D.PixelPerfect.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.2D.Tilemap.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.2D.Tilemap.Editor.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Universal.Shaders">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="PsdPlugin">
       <HintPath>Library\ScriptAssemblies\PsdPlugin.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.2D.Tilemap.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
@@ -729,6 +737,9 @@
     <Reference Include="Unity.TextMeshPro">
       <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Searcher.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.2D.IK.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.IK.Editor.dll</HintPath>
     </Reference>
@@ -741,8 +752,8 @@
     <Reference Include="Unity.2D.Path.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Path.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.InternalAPIEditorBridge.001">
-      <HintPath>Library\ScriptAssemblies\Unity.InternalAPIEditorBridge.001.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
@@ -753,14 +764,26 @@
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.InternalAPIEditorBridge.001">
+      <HintPath>Library\ScriptAssemblies\Unity.InternalAPIEditorBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
       <HintPath>Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.IK.Runtime">
       <HintPath>Library\ScriptAssemblies\Unity.2D.IK.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ShaderGraph.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Triangle.Runtime">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
@@ -770,6 +793,12 @@
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.PixelPerfect.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
@@ -785,6 +814,9 @@
     </Reference>
     <Reference Include="Unity.2D.Common.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Common.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Runtime">
       <HintPath>Library\ScriptAssemblies\Unity.2D.SpriteShape.Runtime.dll</HintPath>
