save and load option

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,43 +41,44 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Source\Actors\Static\Map.cs" />
-     <Compile Include="Assets\Inventory.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Dor.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemMap.cs" />
+     <Compile Include="Assets\Source\Core\Inventory.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemDor.cs" />
      <Compile Include="Assets\Source\Actors\Static\Window.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Dog.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemDog.cs" />
      <Compile Include="Assets\Source\Actors\Static\HiddenSecret.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Ring1.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemRing1.cs" />
      <Compile Include="Assets\Materials\LightFlickerEffect.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Gate.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemGate.cs" />
      <Compile Include="Assets\Source\Core\MapLoader.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Sword.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemSword.cs" />
      <Compile Include="Assets\Source\Actors\Static\Dor2.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Meat.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Armor.cs" />
-     <Compile Include="Assets\Source\Actors\Characters\Ghost.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemMeat.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemArmor.cs" />
+     <Compile Include="Assets\Source\Actors\Characters\EnemyGhost.cs" />
      <Compile Include="Assets\Source\Actors\Static\LeftRoof.cs" />
      <Compile Include="Assets\Source\Actors\Static\Wall.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Heal.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemHeal.cs" />
      <Compile Include="Assets\Source\Actors\Static\Floor.cs" />
      <Compile Include="Assets\Source\Actors\Static\Wall2.cs" />
-     <Compile Include="Assets\Source\Actors\Characters\Grave.cs" />
+     <Compile Include="Assets\Source\Actors\Characters\EnemyGrave.cs" />
      <Compile Include="Assets\Source\Core\CameraController.cs" />
      <Compile Include="Assets\Source\Core\UserInterface.cs" />
      <Compile Include="Assets\Source\Actors\Static\CenterRoof.cs" />
      <Compile Include="Assets\Source\Actors\Actor.cs" />
-     <Compile Include="Assets\Source\Actors\Characters\Boss1.cs" />
+     <Compile Include="Assets\Source\Actors\Characters\EnemyBoss1.cs" />
      <Compile Include="Assets\Source\Actors\Characters\Player.cs" />
      <Compile Include="Assets\Source\Actors\Static\StairsDown.cs" />
+     <Compile Include="Assets\Source\SaveAndLoad.cs" />
      <Compile Include="Assets\Source\Actors\Characters\Character.cs" />
      <Compile Include="Assets\Source\Core\Items.cs" />
-     <Compile Include="Assets\Source\Actors\Static\Key.cs" />
+     <Compile Include="Assets\Source\Actors\Static\ItemKey.cs" />
      <Compile Include="Assets\Source\Actors\Static\HiddenFloor.cs" />
-     <Compile Include="Assets\Source\Actors\Characters\Skeleton.cs" />
+     <Compile Include="Assets\Source\Actors\Characters\EnemySkeleton.cs" />
      <Compile Include="Assets\Source\Actors\Static\RightRoof.cs" />
      <Compile Include="Assets\Source\Utilities.cs" />
      <Compile Include="Assets\Source\Actors\Characters\DogCompanion.cs" />
-     <Compile Include="Assets\Source\Actors\Characters\Zombie.cs" />
+     <Compile Include="Assets\Source\Actors\Characters\EnemyZombie.cs" />
      <Compile Include="Assets\Source\Actors\Static\HiddenWall1.cs" />
      <Compile Include="Assets\Source\Actors\Static\HiddenWall2.cs" />
      <Compile Include="Assets\Source\Actors\Static\Torch.cs" />
